--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<section class="batik-section-slider batik-slider-items">
 			<div class="batik-container">
 				<div class="t-page-list">
-					<a href="batik/main.html">main</a>
+					<a href="main.html">main</a>
 					<a href="batik/about.html">about</a>
 					<a href="batik/news.html">news</a>
 					<a href="batik/news-one.html">news-one</a>
