--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 			<div class="batik-container">
 				<div class="t-page-list">
 					<a href="main.html">main</a>
-					<a href="batik/about.html">about</a>
-					<a href="batik/news.html">news</a>
-					<a href="batik/news-one.html">news-one</a>
-					<a href="batik/team.html">team</a>
+					<a href="/about.html">about</a>
+					<a href="/news.html">news</a>
+					<a href="/news-one.html">news-one</a>
+					<a href="/team.html">team</a>
 				</div>
 			</div>
 		</section>
