add path to footer

--- a/index.html
+++ b/index.html
@@ -98,10 +98,10 @@
 						<div class="batik-footer__menu-wrap">
 							<div class="batik-footer__menu-title">Компания</div>
 							<ul class="batik-footer__list">
-								<li><a href="#">О нас</a></li>
-								<li><a href="#">Наша команда</a></li>
+								<li><a href="about.html">О нас</a></li>
+								<li><a href="team.html">Наша команда</a></li>
 								<li><a href="#">Контакты</a></li>
-								<li><a href="#">Новости</a></li>
+								<li><a href="news.html">Новости</a></li>
 							</ul>
 						</div>
 					</nav>
